sumo/tests/sumo/output/e3/errors/freq_missing/errors.sumo
Error: Attribute 'freq' is missing in definition of e3-detector '4/1to3/1'.
Quitting (on error).
